--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>💗 Love you 💗</title>
+  <title>💗 沈惜茜 💗</title>
   <style type="text/css">
     body {
       margin: 0;
